<resources>
    <string name="app_name">Patient Satisfaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>

    <!-- Content text -->
    <string name="clinic">Clinic</string>
    <string name="hospital">Hospital</string>
    <string name="welcome_text">Welcome to the Patient Satisfaction App.  Please take time to evauate your healthcare experience.</string>

    <!-- Clinic Visit Fragment Values -->
    <string name="clinic_visit">Clinic Visit</string>
    <string name="time_physician">Time with Physician</string>
    <string name="waiting">Waiting</string>
    <string name="nursing_interactions">Nursing Interactions</string>
    <string name="receptionist_interaction">Receptionist Interaction</string>
    <string name="discharge_process">Discharge Process</string>
    <string name="follow_up_instructions">Follow Up Instructions</string>
    <string name="why_feel">Why do you feel this way?</string>
</resources>
